--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,48 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
-    background: white;
+body {
+  background: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.card {
+  background: white;
+  width: 200px;
+  height: 300px;
+  border-radius: 12px;
+  padding: 15px;
+  position: relative;
+  font-family: Arial, sans-serif;
+}
+
+.simbolo {
+  font-size: 40px;
+}
+
+.valores {
+  font-size: 80px;
+  text-align: center;
+  line-height: 200px;
+}
+
+.rotado {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  transform: rotate(180deg);
+}
+
+
+.diamantes,
+.corazones {
+  color: red;
+}
+
+.picas,
+.treboles {
+  color: black;
 }
